# mkado

./: .gitignore  README.md  pyproject.toml
docs/: alpha-tg.rst  api.rst  asymptotic.rst  batch-workflow.rst  conf.py  dfe.rst  dos.rst  file-formats.rst  index.rst  installation.rst  requirements.txt  tutorial.rst
examples/: README.md
examples/anopheles_batch/: AGAP000010.fa  AGAP000021.fa  AGAP000041.fa  AGAP000078.fa  AGAP000150.fa  AGAP000169.fa  AGAP000348.fa  AGAP000402.fa  AGAP000432.fa  AGAP000476.fa  AGAP000589.fa  AGAP000610.fa  AGAP000629.fa  AGAP000674.fa  AGAP000691.fa  AGAP000704.fa  AGAP000713.fa  AGAP000790.fa  AGAP000819.fa  AGAP000878.fa  AGAP000883.fa  AGAP000913.fa  AGAP000940.fa  AGAP000950.fa  AGAP000978.fa  AGAP001039.fa  AGAP001051.fa  AGAP001094.fa  AGAP001139.fa  AGAP001148.fa  AGAP001161.fa  AGAP001179.fa  AGAP001182.fa  AGAP001190.fa  AGAP001217.fa  AGAP001230.fa  AGAP001307.fa  AGAP001310.fa  AGAP001349.fa  AGAP001362.fa  (+364 more)
scripts/: validate_grapes_comparison.py
src/mikado/: __init__.py  __main__.py  cli.py
src/mikado/analysis/: __init__.py  asymptotic.py  mk_test.py  polarized.py  statistics.py
src/mikado/core/: __init__.py  alignment.py  codons.py  sequences.py
src/mikado/data/: __init__.py  genetic_codes.py
src/mikado/io/: __init__.py  fasta.py  output.py
src/mkado/: cli.py
src/mkado/analysis/: __init__.py  alpha_tg.py  dfe_models.py  dfe_numba.py  (+3 more)
tests/: __init__.py  test_alpha_tg.py  test_asymptotic.py  test_codons.py  test_fasta.py  test_mk_test.py  test_plotting.py
tests/data/: kreitmanAdh.fa  mauritianaAdh.fa
(+2 files in other folders)
